Swapped logic of setting titles in an option-set. Allowed retrieval of values from numeric and date/time fields. Fixed spacing inside input views (#2241)

--- a/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
@@ -26,10 +26,6 @@
         }
       }
     }
-
-    .form-item-set-occurrence-view.invalid.collapsed {
-      padding: 10px;
-    }
   }
 
   .form-item-set-view,
@@ -162,7 +158,7 @@
 
     > .bottom-button-row {
       box-sizing: border-box;
-      margin-top: 20px;
+      margin-top: 10px;
 
       button {
         max-width: 300px;
