--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -28,6 +28,7 @@
         color: @input-red-text;
         font-size: 14px;
         padding: 0 0 10px 13px;
+        margin-top: -5px;
 
         &.empty {
           display: none;
